benchmarks/verus/bignum/vericoder_glm_15-09_18h46/debug/bignum_ModExp_Mul_iter1_error.log
=== Verification Error - Iteration 1 ===
File: /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/files/bignum_ModExp_Mul.rs
Time: 2025-09-15 20:37:39

Full Error Output:
--------------------------------------------------------------------------------
Compilation failed: error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_ModExp_Mul_impl.rs:39:11
   |
39 |   if n == 0 {
   |      -    ^ expected `nat`, found integer
   |      |
   |      expected because this is `vstd::prelude::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_ModExp_Mul_impl.rs:42:15
   |
42 |     while n > 0
   |           -   ^ expected `nat`, found integer
   |           |
   |           expected because this is `vstd::prelude::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_ModExp_Mul_impl.rs:46:14
   |
46 |       if n % 2 == 0 {
   |          -   ^ expected `nat`, found integer
   |          |
   |          expected because this is `vstd::prelude::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_ModExp_Mul_impl.rs:46:19
   |
46 |       if n % 2 == 0 {
   |          -----    ^ expected `nat`, found integer
   |          |
   |          expected because this is `vstd::prelude::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_ModExp_Mul_impl.rs:51:15
   |
51 |       n = n / 2;
   |           -   ^ expected `nat`, found integer
   |           |
   |           expected because this is `vstd::prelude::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_ModExp_Mul_impl.rs:80:15
   |
80 |   while exp > 0
   |         ---   ^ expected `nat`, found integer
   |         |
   |         expected because this is `vstd::prelude::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_ModExp_Mul_impl.rs:85:14
   |
85 |     if exp % 2 == 1 {
   |        ---   ^ expected `nat`, found integer
   |        |
   |        expected because this is `vstd::prelude::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_ModExp_Mul_impl.rs:85:19
   |
85 |     if exp % 2 == 1 {
   |        -------    ^ expected `nat`, found integer
   |        |
   |        expected because this is `vstd::prelude::nat`

error[E0277]: cannot multiply `{integer}` by `vstd::prelude::nat`
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_ModExp_Mul_impl.rs:86:24
   |
86 |       result = (result * base) % z;
   |                        ^ no implementation for `{integer} * vstd::prelude::nat`
   |
   = help: the trait `std::ops::Mul<vstd::prelude::nat>` is not implemented for `{integer}`
   = help: the following other types implement trait `std::ops::Mul<Rhs>`:
             `&f128` implements `std::ops::Mul<f128>`
             `&f128` implements `std::ops::Mul`
             `&f16` implements `std::ops::Mul<f16>`
             `&f16` implements `std::ops::Mul`
             `&f32` implements `std::ops::Mul<f32>`
             `&f32` implements `std::ops::Mul`
             `&f64` implements `std::ops::Mul<f64>`
             `&f64` implements `std::ops::Mul`
           and 57 others

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_ModExp_Mul_impl.rs:89:17
   |
89 |     exp = exp / 2;
   |           ---   ^ expected `nat`, found integer
   |           |
   |           expected because this is `vstd::prelude::nat`

error: aborting due to 10 previous errors

Some errors have detailed explanations: E0277, E0308.
For more information about an error, try `rustc --explain E0277`.

--------------------------------------------------------------------------------

Additional Output:
error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_ModExp_Mul_impl.rs:39:11
   |
39 |   if n == 0 {
   |      -    ^ expected `nat`, found integer
   |      |
   |      expected because this is `vstd::prelude::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_ModExp_Mul_impl.rs:42:15
   |
42 |     while n > 0
   |           -   ^ expected `nat`, found integer
   |           |
   |           expected because this is `vstd::prelude::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_ModExp_Mul_impl.rs:46:14
   |
46 |       if n % 2 == 0 {
   |          -   ^ expected `nat`, found integer
   |          |
   |          expected because this is `vstd::prelude::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_ModExp_Mul_impl.rs:46:19
   |
46 |       if n % 2 == 0 {
   |          -----    ^ expected `nat`, found integer
   |          |
   |          expected because this is `vstd::prelude::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_ModExp_Mul_impl.rs:51:15
   |
51 |       n = n / 2;
   |           -   ^ expected `nat`, found integer
   |           |
   |           expected because this is `vstd::prelude::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_ModExp_Mul_impl.rs:80:15
   |
80 |   while exp > 0
   |         ---   ^ expected `nat`, found integer
   |         |
   |         expected because this is `vstd::prelude::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_ModExp_Mul_impl.rs:85:14
   |
85 |     if exp % 2 == 1 {
   |        ---   ^ expected `nat`, found integer
   |        |
   |        expected because this is `vstd::prelude::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_ModExp_Mul_impl.rs:85:19
   |
85 |     if exp % 2 == 1 {
   |        -------    ^ expected `nat`, found integer
   |        |
   |        expected because this is `vstd::prelude::nat`

error[E0277]: cannot multiply `{integer}` by `vstd::prelude::nat`
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_ModExp_Mul_impl.rs:86:24
   |
86 |       result = (result * base) % z;
   |                        ^ no implementation for `{integer} * vstd::prelude::nat`
   |
   = help: the trait `std::ops::Mul<vstd::prelude::nat>` is not implemented for `{integer}`
   = help: the following other types implement trait `std::ops::Mul<Rhs>`:
             `&f128` implements `std::ops::Mul<f128>`
             `&f128` implements `std::ops::Mul`
             `&f16` implements `std::ops::Mul<f16>`
             `&f16` implements `std::ops::Mul`
             `&f32` implements `std::ops::Mul<f32>`
             `&f32` implements `std::ops::Mul`
             `&f64` implements `std::ops::Mul<f64>`
             `&f64` implements `std::ops::Mul`
           and 57 others

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_ModExp_Mul_impl.rs:89:17
   |
89 |     exp = exp / 2;
   |           ---   ^ expected `nat`, found integer
   |           |
   |           expected because this is `vstd::prelude::nat`

error: aborting due to 10 previous errors

Some errors have detailed explanations: E0277, E0308.
For more information about an error, try `rustc --explain E0277`.
